--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "react-parallax-mouse": "^1.7.3"
   },
   "jest": {
     "preset": "jest-preset-preact",
